--- a/hieradata/clients/azure.ci.jenkins.io.yaml
+++ b/hieradata/clients/azure.ci.jenkins.io.yaml
@@ -315,7 +315,7 @@ profile::jenkinscontroller::jcasc:
               - docker
               - linux
               - linux-amd64
-            useAsMuchAsPosible: true
+            useAsMuchAsPossible: true
             spot: true
             userData: &BootstrapDatadogScript
               - "#!/bin/bash"
@@ -339,7 +339,7 @@ profile::jenkinscontroller::jcasc:
             architecture: "amd64"
             labels:
               - docker-windows
-            useAsMuchAsPosible: true
+            useAsMuchAsPossible: true
             spot: true
             userData:
               #this script is ran before the agent service startup so no need to restart it
@@ -353,7 +353,7 @@ profile::jenkinscontroller::jcasc:
             architecture: "amd64"
             labels:
               - windows-2022
-            useAsMuchAsPosible: false
+            useAsMuchAsPossible: false
             spot: false
             userData:
               #this script is ran before the agent service startup so no need to restart it
@@ -370,7 +370,7 @@ profile::jenkinscontroller::jcasc:
               - highram
               - docker-highmem
               - linux-amd64-big
-            useAsMuchAsPosible: false
+            useAsMuchAsPossible: false
             spot: false
             userData: *BootstrapDatadogScript
           - description: "ARM64 ubuntu 20.04"
@@ -381,7 +381,7 @@ profile::jenkinscontroller::jcasc:
             labels:
               - arm64docker
               - arm64linux
-            useAsMuchAsPosible: false
+            useAsMuchAsPossible: false
             spot: true
             userData: *BootstrapDatadogScript
     azure-vm-agents:
@@ -402,7 +402,7 @@ profile::jenkinscontroller::jcasc:
             - docker
             - linux-amd64
           maxInstances: 10
-          useAsMuchAsPosible: true
+          useAsMuchAsPossible: true
           credentialsId: "jenkinsvmagents-userpass"
           usePrivateIP: true
           virtualNetworkName: "prod-jenkins-public-prod"
@@ -424,7 +424,7 @@ profile::jenkinscontroller::jcasc:
             - docker-highmem
             - linux-amd64-big
           maxInstances: 20
-          useAsMuchAsPosible: false
+          useAsMuchAsPossible: false
           usePrivateIP: true
           credentialsId: "jenkinsvmagents-userpass"
           virtualNetworkName: "prod-jenkins-public-prod"
@@ -443,7 +443,7 @@ profile::jenkinscontroller::jcasc:
           labels:
             - docker-windows
           maxInstances: 20
-          useAsMuchAsPosible: true
+          useAsMuchAsPossible: true
           credentialsId: "jenkinsvmagents-userpass"
           useEphemeralOSDisk: false
           usePrivateIP: true
