--- a/hieradata/rspec/profile_jenkinscontroller.yaml
+++ b/hieradata/rspec/profile_jenkinscontroller.yaml
@@ -78,7 +78,7 @@ profile::jenkinscontroller::jcasc:
             architecture: "amd64"
             labels:
               - ec2_datadog
-            useAsMuchAsPosible: false
+            useAsMuchAsPossible: false
             userData: &datadogInitUserData
               - "#!/bin/bash"
               - "sed 's/api_key:.*/api_key: tokeepsecret' /etc/datadog-agent/datadog.yaml.example > /etc/datadog-agent/datadog.yaml"
@@ -118,7 +118,7 @@ profile::jenkinscontroller::jcasc:
             - linux
             - docker
           maxInstances: 10
-          useAsMuchAsPosible: true
+          useAsMuchAsPossible: true
           credentialsId: "jenkinsvmagents-userpass"
           usePrivateIP: true
           virtualNetworkName: "prod-jenkins-public-prod"
@@ -137,7 +137,7 @@ profile::jenkinscontroller::jcasc:
           labels:
             - docker-windows
           maxInstances: 20
-          useAsMuchAsPosible: true
+          useAsMuchAsPossible: true
           credentialsId: "jenkinsvmagents-userpass"
           useEphemeralOSDisk: false
           usePrivateIP: true
