fix(private-vpn): don't include 99-disable-network-config.cfg if there are only 2 network interfaces (#2544)
* fix(private-vpn): don't include 99-disable-network-config.cfg if there are only 2 network interfaces

* empty file if less than 3 interfaces

* Revert "empty file if less than 3 interfaces"

This reverts commit 776c087f8e177f5c9df6481e892a74f9c3cfca9e.

* fix tests

* expect no file

* correct not exists

* apply review suggestions

* fix with context

* add comment and put in bottom

* fix: distinct peered_network_cidrs for eth2

Fails with the following otherwise:

Evaluation Error: Error while evaluating a Resource Statement, Duplicate declaration: Firewall[100 allow routing from 127.0.10.0/24 to 10.0.0.0/16 on ports 80/443] is already declared at (file: ./spec/fixtures/modules/profile/manifests/openvpn.pp, line: 156); cannot redeclare (file: ./spec/fixtures/modules/profile/manifests/openvpn.pp, line: 156) (file: ./spec/fixtures/modules/profile/manifests/openvpn.pp, line: 156, column: 9)

* fix

* remove new line

* hint private in fixture

--- a/hieradata/rspec/profile_openvpn_two_interfaces.yaml
+++ b/hieradata/rspec/profile_openvpn_two_interfaces.yaml
@@ -10,12 +10,7 @@ profile::openvpn::networks:
     network_cidr: 192.168.100.0/24
     peered_network_cidrs:
       - 10.0.0.0/16
-  eth2:
-    name: Another Network
-    network_cidr: 192.168.200.0/24
-    peered_network_cidrs:
-      - 11.0.0.0/16
 profile::openvpn::vpn_networks_cidr:
   - 127.0.10.0/24
   - 172.19.0.0/24
-profile::openvpn::openvpn_network: default
+profile::openvpn::openvpn_network: private
