--- a/updatecli/weekly.d/puppet-modules/letsencrypt.yaml
+++ b/updatecli/weekly.d/puppet-modules/letsencrypt.yaml
@@ -19,11 +19,11 @@ sources:
     name: Get the latest puppetlabs-letsencrypt module version
     spec:
       owner: voxpupuli
-      repository: puppetlabs-letsencrypt
+      repository: puppet-letsencrypt
       token: "{{ requiredEnv .github.token }}"
       username: "{{ .github.username }}"
       versionfilter:
-        kind: semver
+        kind: latest # Avoid semver because https://github.com/voxpupuli/puppet-letsencrypt/releases/tag/v999.999.999 exists :'(
     transformers:
       - trimprefix: v
 
@@ -42,9 +42,9 @@ targets:
     spec:
       file: Puppetfile
       matchpattern: >
-        mod 'puppetlabs-letsencrypt'(.*)
+        mod 'puppet-letsencrypt'(.*)
       replacepattern: >
-        mod 'puppetlabs-letsencrypt', '{{ source "latestVersion" }}'
+        mod 'puppet-letsencrypt', '{{ source "latestVersion" }}'
     scmid: default
 
 actions:
